--- a/GuiTestApp/GuiTestApp.csproj
+++ b/GuiTestApp/GuiTestApp.csproj
@@ -70,5 +70,11 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SharpPreloaders\SharpPreloaders.csproj">
+      <Project>{617c8e9d-191a-48fb-81d4-d11c5539726f}</Project>
+      <Name>SharpPreloaders</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
