--- a/SharpPreloaders/SharpPreloaders.csproj
+++ b/SharpPreloaders/SharpPreloaders.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FrameBuilders\BallLineToBoxFrameBuilder.cs" />
     <Compile Include="FrameBuilders\FrameBuilder.cs" />
     <Compile Include="FrameBuilders\SimpleBallBounceFrameBuilder.cs" />
     <Compile Include="Preloader.cs" />
