--- a/SharpPreloaders/SharpPreloaders.csproj
+++ b/SharpPreloaders/SharpPreloaders.csproj
@@ -48,6 +48,7 @@
     <Compile Include="ImageBoundry.cs" />
     <Compile Include="Preloader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpinningGearsFrameBuilder.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
